<resources>
  <string name="ethereum" translatable="false">ETH</string>
  <string name="plus_count" translatable="false">+%d</string>
  <string name="currency_usd" translatable="false">USD</string>
  <string name="currency_pen" translatable="false">PEN</string>
  <string name="currency_ars" translatable="false">ARS</string>
  <string name="currency_eur" translatable="false">EUR</string>
  <string name="currency_rub">RUB</string>
  <string name="milli_ethereum" translatable="false">mETH</string>
  <string name="drop_down_icon" translatable="false">&#x25BC;</string>
  <string name="eth_amount_format_string" translatable="false">%f</string>
  <string name="eth_amount_short_format_string" translatable="false">%.2f</string>
  <string name="unknown_value" translatable="false">…</string>
  <string name="object_format_string" translatable="false">%1$s, %2$s</string>
  <string name="locale">en</string>
  <string name="bottom_navigation_home">Home</string>
  <string name="bottom_navigation_team">Team</string>
  <string name="bottom_navigation_proxies">Proxies</string>
  <string name="bottom_navigation_me">Me</string>
  <string name="team_feed">Feed</string>
  <string name="team_members">Teammates</string>
  <string name="team_claims">Claims</string>
  <string name="teammate_net_format_string_plus"><![CDATA[<font color="#1fc0b6">+</font> %1$s%2$s]]></string>
  <string name="teammate_net_format_string_minus"><![CDATA[<font color="#dc2459">-</font> %1$s%2$s]]></string>
  <string name="teammate_net_format_string_zero">%s0</string>
  <string name="risk_format_string" translatable="false">%.1f</string>
  <string name="float_format_string_1" translatable="false">%.1f</string>
  <string name="float_format_string_2" translatable="false">%.2f</string>
  <string name="risk_vote_format_string" translatable="false">%.2f</string>
  <string name="currency_format_string" translatable="false">%.0f</string>
  <string name="teammates">Teammates</string>
  <string name="new_teammates">New Teammates</string>
  <string name="net">Net</string>
  <string name="cover_me">Covers me</string>
  <string name="cover_them">Cover them</string>
  <string name="voting_ends_title">Voting ends in</string>
  <string name="object">Object</string>
  <string name="coverage_type">Covered</string>
  <string name="collision_deductible_insurance">Collision Deductible</string>
  <string name="limit">Coverage</string>
  <string name="see_claims_format_string">See Claims (%d)</string>
  <string name="voting_stats">Voting Stats</string>
  <string name="weight">Weight</string>
  <string name="proxy_rank">Proxy Rank</string>
  <string name="decisions">Decisions</string>
  <string name="discussions">Discussions</string>
  <string name="voting_frequency">Voting Freq.</string>
  <string name="voting_frequency_short">@string/voting_frequency</string>
  <string name="add_to_my_proxies">Add to my proxy voters</string>
  <string name="claim_title_format_string">Claim %d</string>
  <string name="claim_title_date_format_string">Claim - %s</string>
  <string name="claim_details">Claim Details</string>
  <string name="claim_amount">Claim Amount</string>
  <string name="voting">Voting</string>
  <string name="voting_risk">Voting: Risk</string>
  <string name="card_voting_label">@string/voting</string>
  <string name="estimated_expenses">Estimated expenses</string>
  <string name="deductible">Deductible</string>
  <string name="coverage">Coverage</string>
  <string name="incident_date">Incident date</string>
  <string name="amount_format_string" formatted="false">%1$s%2$s</string>
  <string name="percentage_format_string">%d%%</string>
  <string name="team_vote">Team Vote</string>
  <string name="your_vote">Your vote</string>
  <string name="vote_in_percent_format_string"><![CDATA[<font color="#2c3948">%d</font><font color="#35abd9">%%</font>]]></string>
  <string name="vote_avg_difference_bigger_format_string">"AVG\n+%d%%"</string>
  <string name="vote_avg_difference_smaller_format_string">"AVG\n%d%%"</string>
  <string name="vote_avg_difference_same">"AVG\n0%"</string>
  <string name="reset_vote">Reset Vote</string>
  <string name="no_teammate_vote_value">. . .</string>
  <string name="wallet">Wallet</string>
  <string name="submit_another_claim">Submit Claim</string>
  <string name="coverage_format_string"><![CDATA[<font color="#2c3948">%d</font><font color="#35abd9">%%</font>]]></string>
  <string name="home_team_vote_format_string"><![CDATA[<font color="#2c3948">%d</font><font color="#1fc0b6">%%</font>]]></string>
  <string name="your_claim">Your claim</string>
  <string name="claimed">Claimed</string>
  <string name="welcome_user_format_string">Hi %s! </string>
  <string name="application">Application</string>
  <string name="discussion">Discussion</string>
  <string name="pet_insurance">Pet Health</string>
  <string name="claim">Claim</string>
  <string name="application_discussion">Application Discussion</string>
  <string name="here_whats_new">"Here what's new for you"</string>
  <string name="try_demo">Try the Demo</string>
  <string name="continue_with_facebook">Continue with Facebook</string>
  <string name="continue_with_vk">Continue with VK</string>
  <string name="continue_without_login" translatable="false">Continue</string>
  <string name="proxy_vote">Proxy Vote</string>
  <string name="my_proxies">My Proxies</string>
  <string name="proxy_for">Proxy For</string>
  <string name="user_index">User Index</string>
  <string name="remove_from_my_proxies">Remove from my proxies</string>
  <string name="total_commission">Total Commission</string>
  <string name="commission_format_string">%1$s%2$.2f</string>
  <string name="i_am_proxy_for">"Who you're a proxy for"</string>
  <string name="last_voted_format_string">Last Voted: %s</string>
  <string name="you">You</string>
  <string name="opt_into_rating">Opt Into Rating</string>
  <string name="opt_out_of_rating">Opt Out of Rating</string>
  <string name="profile">Profile</string>
  <string name="decision_harsh">harsh</string>
  <string name="decision_severe">severe</string>
  <string name="decision_moderate">moderate</string>
  <string name="decision_mild">mild</string>
  <string name="decision_generous">generous</string>
  <string name="discussion_quite">quite</string>
  <string name="discussion_reserved">reserved</string>
  <string name="discussion_moderate">moderate</string>
  <string name="discussion_sociable">sociable</string>
  <string name="discussion_chatty">chatty</string>
  <string name="voting_never">never</string>
  <string name="voting_rarely">rarely</string>
  <string name="voting_occasionally">occasionally</string>
  <string name="voting_frequently">frequently</string>
  <string name="voting_often">often</string>
  <string name="voting_regularly">regularly</string>
  <string name="voting_always">always</string>
  <string name="start_discussion">Start Discussion</string>
  <string name="other_insurance">Other insurance</string>
  <string name="report_claim">Report Claim</string>
  <string name="report">Report</string>
  <string name="expenses">Expenses</string>
  <string name="describe_your_case">Describe your case</string>
  <string name="photos">Photos</string>
  <string name="add_photos">Add photos</string>
  <string name="add_photos_to_chat">Add to Chat</string>
  <string name="make_photos">Take Photos</string>
  <string name="take_another_photo">Take Another Photo</string>
  <string name="reimburse_to">reimburse to</string>
  <string name="submit_claim">Submit</string>
  <string name="no_incident_date_error">No incident date</string>
  <string name="big_expenses_error">The expenses must not be greater than %1$s%2$.2f.</string>
  <string name="no_description_provided_error">No description provided.</string>
  <string name="no_expenses_provided_error">No expenses provided.</string>
  <string name="no_address_provided">No address provided.</string>
  <string name="please_wait">Please wait</string>
  <string name="post">Post</string>
  <string name="title">Title</string>
  <string name="new_discussion">New Discussion</string>
  <string name="view_to_vote">View to Vote</string>
  <string name="claim_header_voting">Voting</string>
  <string name="claim_header_voted">Voted</string>
  <string name="claim_header_being_paid">Being Paid</string>
  <string name="claim_header_fully_paid">Fully Paid</string>
  <string name="claim_vote_format_string">Voted (%d%%)</string>
  <string name="claim_reimbursed">Reimbursed</string>
  <string name="bike_insurance">Theft</string>
  <string name="something_went_wrong_error">Oops! Something went wrong.</string>
  <string name="no_internet_connection">No Internet Connection.</string>
  <string name="chat_not_voted_yet">Not voted yet</string>
  <string name="chat_voted">Voted</string>
  <string name="slogan">Not insurance. A lot better.</string>
  <string name="coverage_explanation_title">How it works</string>
  <string name="coverage_explanation_description">1. Submit a claim\n2. The team discusses and votes\n3. Teammates pay their shares of reimbursement</string>
    <string name="coverage_explanation_possible_payment">Your maximum payment</string>
  <string name="coverage_explanation_teammates_would_pay">Teammates with at least the same coverage</string>
  <string name="notification_claim_header">New claim in %1$s</string>
  <string name="notification_claim_text">%1$s for %2$s</string>
  <string name="notification_messages_since">%d new messages</string>
  <string name="notification_funded_header">Your wallet has been funded</string>
  <string name="inbox">Private Chats</string>
  <string name="my_proxies_empty_prompt"><![CDATA[<font color=\'#3c4753\'>You don’t have Proxy Voters yet.</font><br><br><font color=\'#95a5b1\'>Please consider someone you trust to be your first Proxy Voter.</font]]></string>
  <string name="proxies_for_empty_prompt"><![CDATA[<font color=\'#3c4753\'>You’re not a Proxy Voter for anyone in the team.</font><br><br><font color=\'#95a5b1\'>You can become a Proxy Voter by gaining trust of other teammates - post your ideas, opinions and votes.</font]]></string>
  <string name="private_conversation">Private Chat</string>
  <string name="ends_in">Ends in %s</string>
  <string name="declined">Declined</string>
  <string name="all_votes">All Votes</string>
  <string name="weight_format_string"><![CDATA[Weight <b>%.1f</b>]]></string>
  <string name="votes">Votes</string>
  <string name="private_message_notification_title">%s (new message)</string>
  <string name="withdraw">Withdraw</string>
  <string name="reserved">Reserved</string>
  <string name="available">Available</string>
  <string name="registration" translatable="false">Application</string>
  <string name="model" translatable="false">Car</string>
  <string name="model_hint" translatable="false">Ford Focus 2016</string>
  <string name="name_hint" translatable="false">John Smith</string>
  <string name="location_hint" translatable="false">New Yourk, USA</string>
  <string name="email_hint" translatable="false">myemail@gmail.com</string>
  <string name="email" translatable="false">E-mail</string>
  <string name="register" translatable="false">Done</string>
  <string name="terms_of_services_agreement" translatable="false"><![CDATA[By pressing the Done button, you accept Teambrella\'s <a href="https://teambrella.com/TermsOfService.pdf">Terms Of Service</a>]]></string>
  <string name="my_name_is_title" translatable="false">Name Surname</string>
  <string name="location_title" translatable="false">City</string>
  <string name="for_risks">For risks</string>
  <string name="for_payouts">For payouts</string>
  <string name="times_as_team_or_lower">of the time - as team or lower</string>
  <string name="times_as_team_or_more">of the time - as team or more</string>
    <string name="payout">payout</string>
  <string name="fixed_rate">Fixed rate</string>
  <string name="to_pay">For payment</string>
  <string name="paid">paid</string>
</resources>