<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_confetti_color"
            tools:ignore="ContentDescription" />

        <com.teambrella.android.ui.widget.CircleView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@+id/input_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/team_icon"
            style="@style/Teambrella.Registration.TeamIcon"
            android:layout_marginTop="84dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/team_name"
            style="@style/Teambrella.Registration.TextAppearance.TeamName"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_icon" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/team_country"
            style="@style/Teambrella.Registration.TextAppearance.Country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_name" />


        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/section_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_country"
            app:layout_constraintVertical_bias="0.0"
            android:orientation="vertical"
            app:layout_constraintWidth_max="400dp"
            app:layout_constrainedWidth="true"
            android:layout_margin="16dp"
            android:padding="36dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/header"
                style="@style/Teambrella.Registration.TextAppearance.Header"
                android:text="@string/registration" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/name_title"
                style="@style/Teambrella.Registration.TextAppearance.InputTitle"
                android:layout_marginTop="24dp"
                android:text="@string/my_name_is_title" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name_value"
                style="@style/Teambrella.Registration.TextAppearance.Input"
                android:hint="@string/name_hint"
                android:nextFocusForward="@id/email_value"
                android:imeOptions="actionNext" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/email_title"
                style="@style/Teambrella.Registration.TextAppearance.InputTitle"
                android:text="@string/email" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_value"
                style="@style/Teambrella.Registration.TextAppearance.Input"
                android:hint="@string/email_hint"
                android:nextFocusForward="@id/location_value"
                android:imeOptions="actionNext" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/location_title"
                style="@style/Teambrella.Registration.TextAppearance.InputTitle"
                android:text="@string/location_title" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/location_value"
                style="@style/Teambrella.Registration.TextAppearance.Input"
                android:hint="@string/location_hint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/model_value" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/model_title"
                style="@style/Teambrella.Registration.TextAppearance.InputTitle"
                android:layout_marginTop="16dp"
                android:text="@string/model" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/model_value"
                style="@style/Teambrella.Registration.TextAppearance.Input"
                android:imeOptions="actionDone"
                android:hint="@string/model_hint" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/agreement"
                style="@style/Teambrella.Registration.TextAppearance.Agreement"
                android:layout_marginTop="24dp"
                android:text="@string/terms_of_services_agreement" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/register"
                style="@style/Teambrella.Registration.TextAppearance.SocialButton"
                android:layout_marginTop="36dp"
                android:layout_gravity="end"
                android:text="@string/register"
                android:background="@drawable/header_button" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</ScrollView>