<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="24dp">


    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        android:id="@+id/header"
        style="@style/Teambrella.Teammate.Section.TextAppearence.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/voting_stats" />

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:divider="@drawable/vertical_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/stats_risks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dividerPadding="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.Info"
                android:text="@string/for_risks" />

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                android:id="@+id/risks_votes"
                style="@style/Teambrella.Teammate.HeaderView.TextAppearence.CoverValue"
                android:paddingTop="8dp"
                android:textSize="28sp" />

            <com.teambrella.android.ui.widget.AkkuratRegularTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.InfoComment"
                android:text="@string/times_as_team_or_lower" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_claims"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.Info"
                android:text="@string/for_payouts" />

            <com.teambrella.android.ui.widget.AkkuratBoldTextView
                android:id="@+id/claims_votes"
                style="@style/Teambrella.Teammate.HeaderView.TextAppearence.CoverValue"
                android:textSize="28sp"
                android:paddingTop="8dp" />

            <com.teambrella.android.ui.widget.AkkuratRegularTextView
                style="@style/Teambrella.Teammate.Section.TextAppearence.InfoComment"
                android:text="@string/times_as_team_or_more" />

        </LinearLayout>
    </LinearLayout>


    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        style="@style/Teambrella.TextAppearance.SectionButton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/add_to_proxies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_to_my_proxies" />

</LinearLayout>