<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.CoordinatorLayout>


    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navigation_view_background"
        android:orientation="horizontal">


        <com.teambrella.android.ui.widget.BottomBarItemView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:itemIcon="@drawable/ic_icon_home"
            app:itemTitle="@string/bottom_navigation_home" />

        <com.teambrella.android.ui.widget.BottomBarItemView
            android:id="@+id/team"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:itemIcon="@drawable/ic_icon_team"
            app:itemTitle="@string/bottom_navigation_team" />


        <com.teambrella.android.ui.widget.BottomBarItemView
            android:id="@+id/proxies"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:itemIcon="@drawable/ic_icon_proxies"
            app:itemTitle="@string/bottom_navigation_proxies" />


        <com.teambrella.android.ui.widget.BottomBarItemView
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:itemTitle="@string/bottom_navigation_me" />

    </LinearLayout>

</RelativeLayout>