<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/toolbar"
            layout="@layout/teambrella_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_scrollFlags="enterAlways"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="#35abd9"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextAppearance="@style/Teambrella.TextAppearence.Tab"
        app:tabTextColor="@color/lightPeriwinkle">

        <com.google.android.material.tabs.TabItem
            android:text="@string/profile"
            android:textSize="15sp" />

        <com.google.android.material.tabs.TabItem android:text="@string/coverage" />

        <com.google.android.material.tabs.TabItem android:text="@string/wallet" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</LinearLayout>