<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.teambrella.android.ui.widget.AkkuratBoldTextView
        style="@style/Teambrella.Teammate.Section.TextAppearence.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fixed_rate" />

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            android:id="@+id/claim_crypto_rate"
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/battleshipGrey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to_pay" />

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            android:id="@+id/to_pay"
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/battleshipGrey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paid" />

        <com.teambrella.android.ui.widget.AkkuratRegularTextView
            android:id="@+id/paid"
            style="@style/Teambrella.Teammate.Section.TextAppearence.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/battleshipGrey" />

    </LinearLayout>

</LinearLayout>